--- a/sesi-08/Hello-Style/public/index.html
+++ b/sesi-08/Hello-Style/public/index.html
@@ -11,7 +11,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>StateFull</title>
+  <title>Hello Style</title>
 </head>
 
 <body>
